// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks the delete behavior when quote does not exist 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Quote does not exist in the database.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`deletes a quote 1`] = `
Object {
  "data": Object {
    "deleteQuote": Object {
      "id": "123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
